# thai-shop

./: .Cargo.toml.un~  Cargo.toml  package-lock.json
backend/: .env  Cargo.toml  Cargo.toml~
backend/configuration/: base.yaml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/migrations/: 20220531155533_create_item_table.sql
backend/migrations/2022-04-09-064002_create_items/: down.sql  up.sql
backend/src/: configuration.rs  lib.rs  main.rs  populate.rs  startup.rs  telemetry.rs
backend/src/domain/: error.rs  item.rs  mod.rs
backend/src/entity/: items.rs  mod.rs  prelude.rs
backend/src/routes/: fetch.rs  fetch_item.rs  get_all.rs  image.rs  mod.rs  react_page.rs
backend/tests/: helper.rs
backend_test/: Cargo.toml
backend_test/scripts/: init_db.sh
backend_test/src/: configuration.rs  main.rs
backend_test/src/domain/: item.rs
backend_test/src/routes/: fetch.rs  mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.css
frontend/src/components/: .Navbar.jsx.un~  AddButtons.jsx  Breadcrumbs.jsx  CardGrid.jsx  Categories.jsx  CheckboxMenu.jsx  Footer.jsx  Inputfield.jsx  Navbar.jsx  Navbar.jsx~  SearchBar.jsx  SideMenu.jsx  Slider.jsx  (+3 more)
items/: item_list.txt  items.csv
new_backend/: Cargo.toml
new_backend/configuration/: production.yaml
new_backend/src/: populate.rs  startup.rs
new_backend/tests/: health_check.rs  helper.rs
test/: package-lock.json  package.json
testcomponents/src/: MainLandingPage.js
(+14 files in other folders)
