[package]
name = "backend"
authors = ["Ethan"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"offline"
]

[dependencies]
actix-web = "4"
config = "0.11"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
env_logger = "0.7.1"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
validator = "0.14.0"
secrecy = { version = "0.8", features = ["serde"] }
htmlescape = "0.3"
urlencoding = "2"
anyhow = "1.0.40"
tracing-actix-web = "0.5"
actix-web-lab = "0.15"
actix-files = "0.6.0"
csv = "1.1"
